Fix text overflowing for long meeting names

--- a/src/components/modules/MeetupTitle/MeetupTitle.css
+++ b/src/components/modules/MeetupTitle/MeetupTitle.css
@@ -3,7 +3,11 @@
 }
 
 .meetup-title {
-    @apply text-4xl font-bold focus:outline-none focus:bg-lightgray;
+    @apply text-4xl font-bold focus:outline-none focus:bg-lightgray max-w-full text-center;
+}
+
+.meetup-title:focus {
+    max-width: unset;
 }
 
 div:has(> .meetup-title:focus) {
